# qAPP

./: CMakeLists.txt  LICENCE  LICENCE.md  LINKS.md  README.md  _calendar_8h.html  _color_8h_source.html  _config.yml  _data_8h.html  _data_8h_source.html  _get_data_8h.html  _get_data_feed_8h_source.html  _get_heston_implied_volatility_8h_source.html  _get_ladder2_d_8h_source.html  _get_model_diffusion_8h.html  _get_price_8h_source.html  _get_schedule_8h.html  _get_sequence_8h_source.html  _get_static_replication1_d_8h.html  _get_static_replication1_d_8h_source.html  _logger_8h.html  _model_8h.html  _model_8h_source.html  _pricer_8h.html  _pricing_results_8h.html  _scenario_8h_source.html  classes.html  dir_534da54e357590659202e6c651c9a5cc.html  latest.md  pyproject.toml  structq_a_p_i_1_1_color-members.html  structq_a_p_i_1_1_contract_results-members.html  structq_a_p_i_1_1_data-members.html  structq_a_p_i_1_1_data.html  structq_a_p_i_1_1_data_source.html  structq_a_p_i_1_1_feature_to_solve.html  structq_a_p_i_1_1_fixing-members.html  structq_a_p_i_1_1_fixing.html  structq_a_p_i_1_1_heston_implied_volatility_results-members.html  structq_a_p_i_1_1_implied_contract_feature_results-members.html  (+25 more)
.github/workflows/: _config.yml  jekyll-gh-pages.yml
analysis/CausewaySecurityPayoff/: CausewaySecurityPayoff  CausewaySecurityPayoff.7z  Source.cpp
contracts/: asian_call.cpp  autocall.cpp
demo/: CallFeatureSolver.md  ConfidenceInterval.md  VannaVegaRR.md
doc/: dictionary.md  how_can_i_design_my_contract.md
doc/how-can-i-display-my-observable/: doc.md
doc/how-can-i-edit-my-fixings/: doc.md
doc/how-can-i-feed-my-data-sources/: doc.md
doc/how-can-i-inspect-my-monte-carlo/: doc.md
doc/how-can-i-load-my-contract/: doc.md
doc/how-can-i-move-my-contract/: doc.md
doc/how-can-i-price-my-contract-with-monte-carlo/: doc.md
doc/how-can-i-report-my-issue/: doc.md
doc/html/: _calendar_8h_source.html  _color_8h.html  _color_8h_source.html  _color_8hpp.html  _color_8hpp_source.html  _contract_8h.html  _contract_8h_source.html  _contract_8hpp.html  _contract_8hpp_source.html  _core_8h_source.html  _core_8hpp_source.html  _data_8h.html  _data_8h_source.html  _data_8hpp.html  _data_8hpp_source.html  _get_connection_status_8h.html  _get_connection_status_8h_source.html  _get_connection_status_8hpp.html  _get_connection_status_8hpp_source.html  _get_contract_8h.html  _get_contract_8h_source.html  _get_contract_8hpp.html  _get_contract_8hpp_source.html  _get_data_8h.html  _get_data_8h_source.html  _get_data_8hpp.html  _get_data_8hpp_source.html  _get_data_feed_8h.html  _get_data_feed_8h_source.html  _get_data_feed_8hpp.html  _get_data_feed_8hpp_source.html  (+208 more)
docs/: _algebra_8hpp.html  _algebra_8hpp_source.html  _autocall_8h.html  _autocall_8h_source.html  _calendar_8h.html  _calendar_8h_source.html  _color_8h.html  _color_8h_source.html  _config.yml  _contract_8h.html  _contract_8h_source.html  _core_8h_source.html  _data_8h.html  _data_8h_source.html  _get_black_scholes_calibration_8h.html  _get_black_scholes_calibration_8h_source.html  _get_black_scholes_term_structure_calibration_8h.html  _get_black_scholes_term_structure_calibration_8h_source.html  _get_connection_status_8h.html  _get_connection_status_8h_source.html  _get_contract_8h.html  _get_contract_8h_source.html  _get_data_8h.html  _get_data_8h_source.html  _get_data_feed_8h.html  _get_data_feed_8h_source.html  _get_heston_implied_volatility_8h.html  _get_heston_implied_volatility_8h_source.html  _get_implied_contract_feature_8h.html  _get_implied_contract_feature_8h_source.html  _get_implied_volatility_computation_8h_source.html  _get_ladder1_d_8h.html  _get_ladder1_d_8h_source.html  _get_ladder2_d_8h.html  _get_ladder2_d_8h_source.html  _get_ladder_8h.html  _get_ladder_8h_source.html  _get_m_c_price_with_details_8h.html  _get_m_c_price_with_details_8h_source.html  _get_model_diffusion_8h.html  (+248 more)
posts/: 20240401.md  20240407.md  20240414.md  20240421.md
qapy/: LICENCE  pyproject.toml
qapy/qapy/algebra/: algebra.py  language.py  toolbox.py
qapy/qapy/factory/examples/: asian_call.py  autocall.py  basket_call.py  call.py  call_composite.py  convertible_bond.py  digital.py  digital_call.py  observe_spot.py
scripts/: build.sh  configure.sh
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_8.js  all_b.js  classes_10.js  classes_2.js  classes_4.js  classes_8.js  classes_b.js  classes_e.js  enums_1.js  enums_5.js  enums_7.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_a.js  enumvalues_c.js  enumvalues_d.js  files_0.js  files_1.js  functions_1.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  typedefs_1.js  typedefs_2.js  typedefs_5.js  typedefs_6.js  typedefs_7.js
tests/: asian_call.py  autocall.py  basket_call.py  call.py  call_composite.py  convertible_bond.py  digital.py  digital_call.py  observe_spot.py
(+346 files in other folders)
