[project]
name = "qapy"
version = "0.1.4"
authors = [
  {email = "matthieu.charrier0pro@gmail.com"},
  {name = "mattcharr"}
]
maintainers = [
  {name = "mattcharr", email = "matthieu.charrier0pro@gmail.com"}
]
description = "QA python components: Design your contract with qalgebra and price it with qapi"
readme = "README.md"
keywords = [ "cpp", "finance", "quantitative", "trading", "structured", "products" ]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: Free for non-commercial use",
    "Topic :: Adaptive Technologies",
    "Topic :: Artistic Software",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces"
]

[project.urls]
qapp = "https://github.com/matt-charr/qa-demo/releases"
Homepage = "https://github.com/matt-charr/qa-demo"
Issues = "https://github.com/matt-charr/qa-demo/issues"